Fix sizing on small screen size

--- a/styles/style.css
+++ b/styles/style.css
@@ -606,7 +606,7 @@ nav {
     }
 
     .longstack {
-        padding-top: 3%;
+        padding-top: 1%;
     }
 
     .techstack ul {
